minor error fix

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -219,7 +219,7 @@
                               <% elsif (Time.current - t.last_seen) <= 687200 %>
                                 4일 전
                               <% else %>
-                                <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span></h5>
+                                <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
                               <% end %>
                             </small>
                           </h6>
