--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,12 +15,21 @@ background-size: cover;
 
           <h2 style="margin-top: 0px;word-wrap:break-word; word-break:break-all;"><%=@email%></h2>
           <p>이름과 비밀번호만 설정하면 가입이 완료됩니다.</p>
-          <br>
+          <div class="row">
+            <div class="col-sm-8 col-sm-offset-2">
+              <% if !flash[:notice].blank? %>
+                <div class="well well-sm">
+                  <%= flash[:notice] %>
+                </div>
+              <% end %>
+            </div>
+          </div>
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
             <%= devise_error_messages! %>
 
             <div class="field">
               <%= f.email_field :email, autofocus: true, value: @email, hidden: true %>
+              <%= f.text_field :auth, value: @auth, hidden: true %>
             </div>
 
             <div class="field">
@@ -34,6 +43,7 @@ background-size: cover;
                 <% else %>
                   <%= f.password_field :password, class: "form-control", autocomplete: "off", required: true, placeholder: "비밀번호" %>
                 <% end %>
+                  <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "off", required: true, placeholder: "비밀번호 확인" %>
                 <br>
                 <button type="submit" class="btn btn-new" style="width: 100%;">가입 완료</button>
               </div>
