--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -86,7 +86,7 @@
                     <br>
                     <h4>정말 <%=@team.teamname%>에서 나가겠습니까?</h4>
                     <p>다시 들어오려면 팀원의 초대가 있어야 합니다</p>
-                    <button class="btn btn-danger" onclick="$('#exit').submit();">네, 나가겠습니다</button>
+                    <button class="btn btn-danger" id="button_loading" onclick="$('#exit').submit();">네, 나가겠습니다</button>
                     <br><br>
                   </div>
                 </div>
@@ -123,12 +123,12 @@
       <div class="row">
         <div class="col-sm-2">
           <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-            <div class="panel panel-default">
+            <div class="panel panel-default" onclick="document.getElementById('side_one').click();">
               <div class="panel-heading" role="tab" id="headingZero">
                 <div class="row">
                   <div class="col-xs-9">
                     <h4 class="panel-title">
-                      <a href="/chat/show?team=<%=@team.id%>" data-parent="#accordion" aria-expanded="true" aria-controls="collapseOne">
+                      <a id="side_one" href="/chat/show?team=<%=@team.id%>" data-parent="#accordion" aria-expanded="true" aria-controls="collapseOne">
                       팀 홈으로
                       </a>
                     </h4>
@@ -140,13 +140,13 @@
               </div>
             </div>
             <div class="panel panel-default">
-              <div class="panel-heading" role="tab" id="headingOne">
+              <div class="panel-heading" role="tab" id="headingOne" onclick="document.getElementById('side_two').click();">
                 <% temp = [] %>
                 <% temp += @team.users.order(first_name: :asc) %>
                 <div class="row">
                   <div class="col-xs-9">
                     <h4 class="panel-title">
-                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                      <a role="button" id="side_two" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                       멤버 <small><%=temp.count%>명</small>
                       </a>
                     </h4>
@@ -274,11 +274,11 @@
               </div>
             </div>
             <div class="panel panel-default">
-              <div class="panel-heading" role="tab" id="headingTwo">
+              <div class="panel-heading" role="tab" id="headingTwo" onclick="document.getElementById('side_three').click();">
                 <div class="row">
                   <div class="col-xs-9">
                     <h4 class="panel-title">
-                      <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                      <a class="collapsed" id="side_three" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                         채팅방</a>
                     </h4>
                   </div>
@@ -320,7 +320,7 @@
                           <% end %>
                         <% end %>
                         <br>
-                        <button type="submit" value="send" class="btn btn-new btn-sm" aria-haspopup="true" aria-expanded="false" style="width: 100%">
+                        <button type="submit" value="send" class="btn btn-new btn-sm" id="button_loading" aria-haspopup="true" aria-expanded="false" style="width: 100%">
                           방 만들기
                         </button>
                         <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
@@ -356,11 +356,11 @@
             </div>
 
             <div class="panel panel-default">
-              <div class="panel-heading" role="tab" id="headingThree">
+              <div class="panel-heading" role="tab" id="headingThree" onclick="document.getElementById('side_four').click();">
                 <div class="row">
                   <div class="col-xs-9">
                     <h4 class="panel-title">
-                      <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                      <a class="collapsed" id="side_four" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                         할 일</a>
                     </h4>
                   </div>
@@ -437,7 +437,7 @@
                       <input type="hidden" name="team" value=<%=@team.id%>>
                       <div class="col-sm-12">
                         <br>
-                        <button type="submit" value="send" class="btn btn-new btn-sm" aria-haspopup="true" aria-expanded="false" style="width: 100%">
+                        <button type="submit" value="send" class="btn btn-new btn-sm" id="button_loading" aria-haspopup="true" aria-expanded="false" style="width: 100%">
                           일 분배
                         </button>
                       </div>
