--- a/app/views/team/addmember.html.erb
+++ b/app/views/team/addmember.html.erb
@@ -22,7 +22,7 @@
             <div class="form-group"></div>
             <input type="hidden" name="team" value="<%=@team.id%>">
             <input class="form-control" type="email" name="user_email" placeholder="이메일 입력" required>
-            <button type="submit" class="btn btn-new">팀원 추가</button>
+            <button type="submit" class="btn btn-new" id="button_loading" data-loading-text="추가중.." autocomplete="off">팀원 추가</button>
             <br>
             <br>
             <div style="text-align: right;">
