--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -365,7 +365,7 @@
                     </h4>
                   </div>
                   <div class="col-xs-3" style="text-align: right;">
-                    <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span>
+                    <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
                   </div>
                 </div>
 
