--- a/app/views/message/show.html.erb
+++ b/app/views/message/show.html.erb
@@ -196,12 +196,14 @@
   </div>
 </div>
 
-<% if @chat.messages.count != 0 and @message%>
+<% if @chat.messages.count != 0 %>
   <form action="/message/updateall" method="put" data-remote=true id="messagelookall">
     <input id="checkmessage" type="hidden" name="message_id" value=<%=@chat.messages.last.id%>>
     <input type="hidden" name="chat_id" value=<%=@chat.id%>>
-    <input type="hidden" name="lastread" value="<%=@message.id%>">
-<input id="checkpoint" type="hidden" name="isupdate" value="false">
+    <% if @message %>
+      <input type="hidden" name="lastread" value="<%=@message.id%>">
+    <% end %>
+    <input id="checkpoint" type="hidden" name="isupdate" value="false">
   </form>
 <% end %>
 
