--- a/app/views/message/show.html.erb
+++ b/app/views/message/show.html.erb
@@ -200,6 +200,7 @@
   <form action="/message/updateall" method="put" data-remote=true id="messagelookall">
     <input id="checkmessage" type="hidden" name="message_id" value=<%=@chat.messages.last.id%>>
     <input type="hidden" name="chat_id" value=<%=@chat.id%>>
+    <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
     <% if @message %>
       <input type="hidden" name="lastread" value="<%=@message.id%>">
     <% end %>
