--- a/app/views/chat/show.html.erb
+++ b/app/views/chat/show.html.erb
@@ -1,79 +1,3 @@
-<style>
-  .sidetab{
-    left: 0;
-    float: left;
-    width: 75px;
-    height: 100%;
-    position: absolute;
-    z-index: 1;
-    top: 52px;
-    background-color: #52D5CC;
-    overflow-x: hidden;
-    border: 1px solid #4CCFC5;
-  }
-  .sidebar{
-	    height: 100%;
-	    width: 35%;
-	    max-width: 440px;
-	    position: absolute;
-	    z-index: 1;
-	    top: 52px;
-	    left: 75px;
-	    background-color: #52D5CC;
-	    overflow-x: hidden;
-	    border: 1px solid #4CCFC5;
-	}
-	.homebody{
-	  width: 61%;
-		float: right;
-	}
-	#chat-icon-box{
-	  position: absolute;
-	  top: 50%;
-	  margin-top: -90px;
-	  left: 50%;
-	  margin-left: -20px;
-	}
-	#chat-icon-member{
-	  width: 40px;
-	  height: 40px;
-		font-size: 30px;
-	  color: white;
-	}
-	#chat-icon-chatlist{
-	  width: 40px;
-	  height: 40px;
-		font-size: 30px;
-	  color: white;
-	}
-	#chat_top {
-	  background-color: white;
-    border-bottom: 1px solid #ccc;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 25px;
-    padding-right: 25px;
-  }
-  #chat_top2 {
-	  background-color: white;
-    padding-top: 15px;
-    padding-left: 25px;
-    padding-right: 25px;
-  }
-  #img_setting {
-    width: 70px;
-    height: 70px;
-    float: left;
-    margin-right: 8px;
-    padding: 10px;
-  }
-  #main_name{
-		padding-top: 8px;
-	}
-	#main_status{
-		padding-top: 8px;
-	}
-</style>
 
 <!-- Chat Sidetab -->
 <section class="sidetab">
@@ -98,7 +22,7 @@
         <div class="col-sm-3"></div>
         <form action="/team/addmember" method="get">
           <input type="hidden" name="team" value="<%=@team.id%>"/>
-          <div class="col-sm-2"><button type="submit" class="btn btn-new btn-circle btn-lg" style="margin-top: 8px;"><i class="glyphicon glyphicon-plus"></i></button></div>
+          <div class="col-sm-2"><button type="submit" class="btn btn-new btn-circle btn-lg" data-toggle="tooltip" data-placement="bottom" title="팀원 추가" style="margin-top: 8px;"><i class="glyphicon glyphicon-plus"></i></button></div>
         </form>
       </div>
       <!-- My Profile -->
@@ -140,8 +64,8 @@
     <div class="tab-pane" id="tab2">
       <div class="row" id="chat_top">
       	<div class="col-sm-6"><h2 style="color: #372727;">Chats</h2></div>
-        <div class="col-sm-1"><h2> </h2></div>
-        <div class="col-sm-3"><button class="btn btn-new btn-circle btn-lg" type="button" data-toggle="collapse" data-target="#addchatroom" aria-expanded="false" aria-controls="addchatroom" style="margin-top: 8px;"><i class="glyphicon glyphicon-plus"></i></button></div>
+        <div class="col-sm-4"><h2> </h2></div>
+        <div class="col-sm-2"><button class="btn btn-new btn-circle btn-lg" type="button" data-toggle="tooltip" data-placement="bottom" title="채팅방 만들기" data-target="#addchatroom" aria-expanded="false" aria-controls="addchatroom" style="margin-top: 8px;"><i class="glyphicon glyphicon-plus"></i></button></div>
         
       </div>
       <div class="row collapse" id="addchatroom">
@@ -282,7 +206,7 @@
 
 
 <!-- Homebody for Notification or Something others -->
-<section class="homebody">
+<section class="homebody_chat">
   <div class="row">
 		<aside style="padding-left: 12px; padding-top: 12px;">
 			<img class="img-rounded" alt="profile" src="/favicon.ico" width="100px" height="100px" style="float: left; margin-right: 12px; margin-top: 13px;">
@@ -302,48 +226,7 @@
 	<!-- Tab panes -->
 	<div class="tab-content">
 		<div role="tabpanel" class="tab-pane active" id="tasklist" style="background-color: #F3F3F3;">
-			<style>
-				.bar2 {
-				    background-color: #F3F3F3; /*gray*/
-				    width: 90%;
-				    /*height: 30px;*/
-				    height: 40px;
-				    /*border-left-style: dotted;
-				    border-left-color: black;
-				    border-left-width: thin;
-				    border-top-style: dotted;
-				    border-top-color: black;
-				    border-top-width: thin;*/
-				}
-				.bar2-innertask:after{
-				  position: absolute;
-					right: 2%;
-					color: #0C0C0C;
-					content: attr(data-task);
-					font-size: 18px;
-					font-weight: 700;
-					line-height: 30px;
-				}
-				.bar-innerday {
-					/*background-color: #00B0F0;*/ /*slight deep blue*/
-					width: 0%;
-					/*height: 100%;*/
-					height: 30px;
-					top: 5px;
-					position: relative;
-					transition: width 1250ms linear;
-				}
-				
-				.bar-innerday:after {
-					position: absolute;
-					right: 5.5%;
-					color: #fff; /*white*/
-					content: attr(data-display);
-					font-size: 18px;
-					font-weight: 700;
-					line-height: 30px;
-				}
-			</style>
+
 				<!-- gantt head -->
 				<div class="bar2">
 					<% for j in 0..11 %>
@@ -359,30 +242,15 @@
 					<% a = (b.duedate - (Date.today)).to_i %>
 					<% if a > 0 %>
 						<div class="bar2">
-							<div class="bar2-innertask" data-task ="<%=b.taskname%>"></div>
+							<div class="bar2-innertask_chat" data-task ="<%=b.taskname%>"></div>
 					  		<div id="<%=i%>th-gantt" class="bar-innerday bar-<%=a%>" data-date="<%=a%>" data-display ="D -<%=a%>" style="background-color: #00B0F0;"></div>
 						</div>
 					<% end %>
 				<% end %>
 			<% end %>
 			<script>
-			    function ganttfn(){
-			        (function(document) {
-			          var _bars = [].slice.call(document.querySelectorAll('.bar-innerday'));
-			          _bars.map(function(bar, index) {
-			            setTimeout(function() {
-			              var b = bar.dataset.date * 100/12;
-			              if(b>=99){
-			              	b=99;
-			              }
-			              b+="%";
-			              bar.style.width = b;
-			            }, 1);
-			          });
-			        })(document)
-			    }
-			    ganttfn();
-	  		</script>
+		    ganttfn();
+  		</script>
 		</div>
 		<div role="tabpanel" class="tab-pane" id="taskindiv" style="background-color: #F3F3F3;">
 			<!-- gantt head -->
@@ -415,7 +283,7 @@
 							<% a = (b.duedate - (Date.today)).to_i %>
 							<% if a > 0 %>
 								<div class="bar2">
-									<div class="bar2-innertask" data-task ="<%=b.taskname%>"></div>
+									<div class="bar2-innertask_chat" data-task ="<%=b.taskname%>"></div>
 							  		<div id="<%=i%>th-gantt-each-<%=idx%>" class="bar-innerday bar-<%=a%>" data-date="<%=a%>" data-display ="D -<%=a%>" style="background-color: #00B0F0;"></div>
 								</div>
 								<!-- random color js, has problem -->
