--- a/app/views/resumes/index.html.erb
+++ b/app/views/resumes/index.html.erb
@@ -27,7 +27,7 @@
 
 </table>
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+<button type="button" class="btn btn-new btn-lg" data-toggle="modal" data-target="#myModal">
   Launch demo modal
 </button>
 
